# Next-Gen-Image-Format-Converter-Optimizer

./: .dockerignore  .env.docker  .env.example  .env.production  .gitignore  .markdownlint.json  .pre-commit-config.yaml  BATCH_AUTO_DOWNLOAD_FIX_SUMMARY.md  BATCH_COMPLETION_FIX_SUMMARY.md  BATCH_URL_FIX_SUMMARY.md  CLAUDE.md  CLAUDE_MD_REVIEW.md  CONTRIBUTING.md  DOCKER.md  DOCKER_CLEANUP_GUIDE.md  DOCKER_SECURITY_REPORT.md  LICENSE  README.md  SECURITY_REVIEW_SUMMARY.md  WEBSOCKET_METHOD_FIX_SUMMARY.md  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.yml  nginx-secure.conf  openapi.json  package-lock.json  test_advanced_params.py  test_auto_download.py  test_await_syntax.py  test_batch_await_fix.py  test_batch_completion_fix.js  test_batch_fix_verification.js  test_batch_ui.js  test_batch_ui_fixed.html  test_final_optimization.py  test_functionality_preserved.py  test_lru_cache.py  test_memory_cleanup.py  test_optimization_real_images.py  test_sandboxed_detailed.py  (+6 more)
backend/: .dockerignore  .env.example  .isort.cfg  BATCH_FIXES_SUMMARY.md  COVERAGE_REPORT.md  DEPRECATION_ANALYSIS_REPORT.md  DIAGNOSTIC_REPORT_FINAL.md  Dockerfile  Dockerfile.secure  IMPROVEMENTS_SUMMARY.md  QA_GATE_REPORT_ENTERPRISE.md  QA_TEST_REPORT.md  QA_TEST_REPORT_COMPREHENSIVE.md  QA_TEST_REPORT_ENTERPRISE.md  TEST_REPORT_2025.md  TEST_REPORT_COMPREHENSIVE.md  TEST_REPORT_ENTERPRISE.md  analyze_test_images.py  bandit-report-new.json  bandit-report.json  check_cli_issues.sh  check_overlaps.py  comprehensive_debug.py  comprehensive_test_results.txt  coverage.json  debug_detection.py  fix_cli_sdk_usage.py  fix_sdk_methods.py  fix_sdk_params.py  full_test_results.txt  img.py  pytest.ini  quick_summary.py  requirements-dev.txt  requirements.txt  run_comprehensive_tests.py  test_batch_all_formats.py  test_batch_simple.py  test_conversion.py  test_error_handling_verification.py  (+15 more)
data/: errors.db  (+2 more)
sdks/python/: README.md  pyproject.toml  requirements.txt  setup.py
sdks/python/docs/: conf.py  index.rst  quickstart.rst
sdks/python/examples/: batch_convert.py  convert_single.py
sdks/python/image_converter/: __init__.py  async_client.py  auth.py  client.py  exceptions.py  models.py
sdks/python/tests/integration/: test_client.py
(+507 files in other folders)
